--- a/js/package.json
+++ b/js/package.json
@@ -3,7 +3,7 @@
   "description": "Business in code lab",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --verbose"
   },
   "author": "",
   "license": "ISC",
